force-app/main/default/objects/Role_Matrix__c/Role_Matrix__c.object-meta.xml
<CustomObject>
    <label>Role Matrix</label>
    <nameField>
        <displayFormat>RM-{00000}</displayFormat>
        <label>Role Matrix</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>