force-app/main/default/objects/Role_Matrix__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Role Matrices</relationshipLabel>
    <relationshipName>Role_Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>