force-app/main/default/objects/Role_Matrix__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Role</label>
    <referenceTo>Job_Role__c</referenceTo>
    <relationshipLabel>Role Matrices</relationshipLabel>
    <relationshipName>Role_Matrices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>