force-app/main/default/objects/Role_Matrix__c/fields/Main_Role_Add_on_Formula__c.field-meta.xml
<CustomField>
    <fullName>Main_Role_Add_on_Formula__c</fullName>
    <formula>TEXT(Job_Role__r.Main_Role_Add_on__c)</formula>
    <label>Main Role/Add-on Formula</label>
    <type>Text</type>
</CustomField>