force-app/main/default/objects/Role_Matrix__c/fields/MAPV_Department__c.field-meta.xml
<CustomField>
    <fullName>MAPV_Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MAPV Department</label>
    <referenceTo>MAPV_Department__c</referenceTo>
    <relationshipLabel>Role Matrices</relationshipLabel>
    <relationshipName>Role_Matrices</relationshipName>
    <type>Lookup</type>
</CustomField>