force-app/main/default/objects/Role_Matrix__c/fields/Role_Matrix_Type__c.field-meta.xml
<CustomField>
    <fullName>Role_Matrix_Type__c</fullName>
    <description>Options in this field will decide the type of Role Matrix to be created i.e. which fields will be required to create a Role Matrix record.</description>
    <label>Role Matrix Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4-Criteria Role Matrix</fullName>
            </value>
            <value>
                <fullName>3-Criteria Role Matrix</fullName>
            </value>
            <value>
                <fullName>2-Criteria Role Matrix</fullName>
            </value>
            <value>
                <fullName>Global Job role/ Add-On role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>