force-app/main/default/objects/Role_Matrix__c/fields/Uma_Company__c.field-meta.xml
<CustomField>
    <fullName>Uma_Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Company</valueSetName>
    </valueSet>
</CustomField>