force-app/main/default/objects/Role_Matrix__c/fields/Unique_Combination__c.field-meta.xml
<CustomField>
    <fullName>Unique_Combination__c</fullName>
    <description>This field will store the unique combination of Job Role, MAPV Department, MAPV Group and Company.</description>
    <label>Unique Combination</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>