force-app/main/default/objects/Role_Matrix__c/validationRules/Role_Type_and_Global_Job_Role_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_Type_and_Global_Job_Role_Check</fullName>
    <active>true</active>
    <description>Role Matrix Type should matches with Job Role.</description>
    <errorConditionFormula>OR(AND( ISPICKVAL( Role_Matrix_Type__c , &apos;Global Job role/ Add-On role&apos;) ,    ISPICKVAL(Job_Role__r.Main_Role_Add_on__c, &apos;Main&apos;)  ),
AND( Not(ISPICKVAL( Role_Matrix_Type__c , &apos;Global Job role/ Add-On role&apos;)) , ISPICKVAL(Job_Role__r.Main_Role_Add_on__c, &apos;Add-on&apos;)))</errorConditionFormula>
    <errorDisplayField>Job_Role__c</errorDisplayField>
    <errorMessage>Please select Job Role relevant to the selection in Role Matrix Type.</errorMessage>
</ValidationRule>